--- a/港城公交/ZJGBus/Podfile
+++ b/港城公交/ZJGBus/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '8.0'
 use_frameworks!
 target "ZJGBus" do
-pod 'Alamofire', '~> 4.2.0'
-pod 'SnapKit', '~> 3.0.2'
+pod 'Alamofire'
+pod 'SnapKit'
 pod 'ObjectMapper'
 
 pod 'Bugly'
